fix: location code again
